--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "dev-build": "vue-cli-service build --mode development",
-    "prod-build": "vue-cli-service build --mode producution"
+    "dev-build": "npm install && vue-cli-service build --mode development",
+    "prod-build": "npm install && vue-cli-service build --mode producution"
   },
   "dependencies": {
     "core-js": "^3.6.5",
