--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "vue": "^2.6.14",
-    "core-js": "^3.6.5"
+    "core-js": "^3.6.5",
+    "@vue/compiler-sfc": "^3.0.8"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
