--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "prod-build": "npm install && npm install eslint && vue-cli-service build --mode production"
   },
   "dependencies": {
-    "vue": "^2.6.14",
-    "core-js": "^3.6.5",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.8"
+    "@vue/compiler-sfc": "^3.0.8",
+    "axios": "^0.21.1",
+    "core-js": "^3.6.5",
+    "vue": "^2.6.14"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
