--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "diomera",
   "version": "1.0.0",
   "private": true,
+  "settings": {
+    "vetur.useWorkspaceDependencies": true,
+    "vetur.experimental.templateInterpolationService": true
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -10,11 +14,16 @@
     "prod-build": "npm install && npm install eslint && vue-cli-service build --mode production"
   },
   "dependencies": {
+    "@aws-amplify/ui-components": "^1.6.2",
+    "@aws-sdk/client-s3": "^3.24.0",
+    "@aws-sdk/s3-request-presigner": "^3.24.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.8",
+    "aws-amplify": "^4.2.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
