--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@aws-sdk/s3-request-presigner": "^3.24.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.8",
-    "aws-amplify": "^4.2.0",
+    "aws-amplify": "^4.2.5",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.14",
+    "vue-router": "^3.5.2",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
