--- a/package.json
+++ b/package.json
@@ -14,14 +14,11 @@
     "prod-build": "npm install && npm install eslint && vue-cli-service build --mode production"
   },
   "dependencies": {
-    "@aws-amplify/ui-components": "^1.6.2",
-    "@aws-sdk/client-s3": "^3.24.0",
-    "@aws-sdk/s3-request-presigner": "^3.24.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.8",
-    "aws-amplify": "^4.2.5",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "firebase": "^9.0.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.2",
     "vuex": "^3.6.2"
