--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@vue/compiler-sfc": "^3.0.8",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "firebase": "^9.0.0",
+    "firebase": "^9.0.1",
+    "firebaseui": "^5.0.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.2",
     "vuex": "^3.6.2"
